--- a/frontend/src/pages/SettingsGame.scss
+++ b/frontend/src/pages/SettingsGame.scss
@@ -17,10 +17,20 @@
     max-width: 820px;
   }
 
-  &__title,
   &__options-title,
   &__parameter-title,
   &__instrument-title {
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: black;
+    margin-bottom: 2rem;
+    font-style: italic;
+    position: relative;
+  }
+
+  &__title {
     font-size: 2.6rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -29,6 +39,8 @@
     margin-bottom: 2rem;
     font-style: italic;
     position: relative;
+
+   
 
     &::after,
     &::before {
@@ -77,7 +89,7 @@
     cursor: pointer;
     background-size: 200% 200%;
     background-position: 0% 50%;
-    box-shadow: 0 10px 25px rgba(127, 0, 255, 0.4);
+    box-shadow: 0 10px 25px rgba(160, 64, 255, 0.196);
     transition:
       transform 0.35s cubic-bezier(0.4, 0, 0.2, 1),
       box-shadow 0.3s ease,
@@ -99,7 +111,7 @@
     &:hover {
       transform: translateY(-12px) scale(1.01);
       background-position: 100% 50%;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
+      // box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
       z-index: 10;
     }
 
@@ -107,7 +119,7 @@
       outline: 4px solid $color-red;
       outline-offset: 6px;
       transform: translateY(-14px) scale(1.01);
-      box-shadow: 0 25px 45px rgba(255, 0, 0, 0.75);
+      // box-shadow: 0 25px 45px rgba(255, 0, 0, 0.75);
       background-position: 100% 50%;
       z-index: 15;
     }
@@ -163,11 +175,20 @@
 
     &--selected {
       border-color: $color-purple;
-      background: linear-gradient(135deg, #2b005b, #6e00ff);
-      box-shadow: 0 0 25px rgba(110, 0, 255, 0.7);
+      outline: 4px solid $color-purple;
+      outline-offset: 6px;
+      background: linear-gradient(135deg, #40097e, #6e00ff);
+        // box-shadow: 0 0 25px rgba(110, 0, 255, 0.7);
       transform: scale(1.05);
       z-index: 10;
     }
+
+    // outline: 4px solid $color-red;
+    // outline-offset: 6px;
+    // transform: translateY(-14px) scale(1.01);
+    // box-shadow: 0 25px 45px rgba(255, 0, 0, 0.75);
+    // background-position: 100% 50%;
+    // z-index: 15;
 
     &--easy {
       background: linear-gradient(135deg, #00c851, #007e33);
