--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -41,15 +41,19 @@ body {
   background-position: center;
   background-size: contain;
   position: relative;
-  // &::before {
-  //   content: "";
-  //   z-index: -1;
-  //   position: absolute;
-  //   inset: 0;
-  //   width: 100%;
-  //   height: fit-content;
-  //   background-color: rgba(28, 28, 28, 0.12);
-  // }
+  
+  &::before {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(245, 242, 242, 0.55);
+    border-radius: 1rem;
+    padding: 2.5rem 3rem;
+    box-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
+  }
 }
 
 #root {
@@ -147,7 +151,7 @@ textarea {
 /***Ecran à partir de 1024px***/
 @include mobile-lg {
   main {
-    padding: 0 0 15px 0;
+    padding: 15px 0 15px 0;
   }
 
   header {
